Fix No implementation found for the method ensureInitialized when performing a hot restart. 15 Thanks to mchangtian

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "window_manager_plus",
+  "projectName": "window_manager_plus_v2",
   "projectOwner": "pichillilorenzo",
   "repoType": "github",
   "repoHost": "https://github.com",
