--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: window_manager_plus_example
-description: Demonstrates how to use the window_manager_plus plugin.
+name: window_manager_plus_v2_example
+description: Demonstrates how to use the window_manager_plus_v2 plugin.
 publish_to: "none"
 
 environment:
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   preference_list: ^0.0.2
   tray_manager: ^0.2.4
-  window_manager_plus:
+  window_manager_plus_v2:
     path: ../
 
 dev_dependencies:
